Fixing specialized checkbox alignment

--- a/css/essence20.css
+++ b/css/essence20.css
@@ -1551,3 +1551,7 @@ form .hint {
 .roll-dialog div {
   margin-bottom: 10px;
 }
+
+.roll-dialog div label > *{
+  vertical-align: middle;
+}
